Try to fix navbar item alignment on safari.

--- a/components/nav/navbar/navbar.styl
+++ b/components/nav/navbar/navbar.styl
@@ -24,11 +24,12 @@ $navbar-height = $shell-top-nav-height is defined ? $shell-top-nav-height : 50px
 
 .navbar-items, .navbar-items > li
 	display: inline-block
-	margin-bottom: 0
 	vertical-align: top
+	margin-bottom: 0
 
 .navbar-items > li > a, .navbar-item
 	display: inline-block
+	vertical-align: top
 	overflow: hidden
 	height: $navbar-height
 	line-height: 20px
@@ -57,6 +58,7 @@ $navbar-height = $shell-top-nav-height is defined ? $shell-top-nav-height : 50px
 
 .navbar-avatar
 	display: inline-block
+	vertical-align: top
 	overflow: hidden
 	padding: 10px
 	line-height: 30px
